Formatted Strings. Added JavaDocs. Added new Icon.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,9 @@
     package="edu.orangecoastcollege.cs273.pdavis11.paintestimator">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/paintbrush_animated"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -18,5 +16,4 @@
         </activity>
         <activity android:name=".HelpActivity"></activity>
     </application>
-
 </manifest>
